# terminal_pad

./: .gitignore  ASSESSMENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  dist-workspace.toml  initial_idea.md  project-plan.md
cards/: architecture.md  decision-language-rust.md  decision-sparse-grid.md
src/: app.rs  clipboard.rs  main.rs
src/banner/: CLAUDE.md  mod.rs
src/calc/: CLAUDE.md  mod.rs
src/canvas/: CLAUDE.md  mod.rs
src/editing/: CLAUDE.md  mod.rs
src/help/: CLAUDE.md  mod.rs
src/layout/: CLAUDE.md  mod.rs
src/locations/: CLAUDE.md  mod.rs
src/overview/: CLAUDE.md  mod.rs
src/persistence/: CLAUDE.md  mod.rs
src/render/: CLAUDE.md  mod.rs
src/selection/: CLAUDE.md  mod.rs
src/todo/: CLAUDE.md  mod.rs
src/viewport/: CLAUDE.md  mod.rs
