[package]
name = "terminal_pad"
version = "0.1.0"
edition = "2024"
description = "An infinite-canvas terminal text pad (TUI)."
license = "MIT"
repository = "https://github.com/epatel/terminal_pad"
readme = "README.md"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
