[package]
name = "terminal_pad"
version = "0.2.7"
edition = "2024"
description = "An infinite-canvas terminal text pad (TUI)."
license = "MIT"
repository = "https://github.com/epatel/terminal_pad"
readme = "README.md"

[dependencies]
# Text-only system clipboard; default features pull image-decoding crates we
# don't need (selections are plain characters).
arboard = { version = "3.6.1", default-features = false }
crossterm = "0.29.0"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
